[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Types for the endpoints in the Matrix client-server API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://github.com/ruma/ruma-client-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client-api"
version = "0.1.0"

[dependencies]
futures = "0.1.14"
hyper = "0.11.1"
ruma-api = "0.4.0"
ruma-api-macros = "0.1.0"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
serde_urlencoded = "0.5.1"
url = "1.5.1"

[dependencies.ruma-signatures]
git = "https://github.com/musoke/ruma-signatures"
branch = "unstable-e2e"

[dependencies.ruma-identifiers]
git = "https://github.com/jplatte/ruma-identifiers"
branch = "synapse-workarounds"

[dependencies.ruma-events]
git = "https://github.com/jplatte/ruma-events"
branch = "synapse-workarounds"
